--- a/Styles/header.css
+++ b/Styles/header.css
@@ -27,19 +27,33 @@
 .lista-menu{
     display: none;
     position: absolute;
-    top: 100px;
+    top: 8%;
+    width: 60vw; 
 }
 
 .container__botao:checked ~ .lista-menu{
     display: block;
 }
 
-.lista-meu__titulo, .lista-menu__itens{
+.lista-menu__titulo, .lista-menu__itens{
     padding: 1em;
     background-color: var(--branco);
 }
 
 .lista-menu__titulo{
-    color: var(--laanja);
+    color: var(--laranja);
+    font-weight: 700;
 }
 
+.lista-menu__link{
+    background: var(--azul-degrade);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-transform: uppercase;
+   
+}
+
+.container__botao{
+    display: none;
+}
