--- a/style.css
+++ b/style.css
@@ -1,18 +1,20 @@
 @import url("Styles/header.css");
+@import url("Styles/banner.css");
 
 :root{
     --cor-de-fundo: #EBECEE;
     --branco: #ffffff;
     --laranja:#EB9B00;
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+    --font-principal: "poppins";
 
 
 }
 
 body{
     background-color: var(--cor-de-fundo);
+    font-family: var(--font-principal);
+    font-size: 16px;
+    font: weight: 400;
 }
 
-h1{
-    background-color: white;
-}
