--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url("Styles/header.css");
 @import url("Styles/banner.css");
+@import url("Styles/carrossel.css");
 
 :root{
     --cor-de-fundo: #EBECEE;
@@ -15,6 +16,6 @@ body{
     background-color: var(--cor-de-fundo);
     font-family: var(--font-principal);
     font-size: 16px;
-    font: weight: 400;
+    font-weight: 400;
 }
 
