--- a/Styles/carrossel.css
+++ b/Styles/carrossel.css
@@ -20,3 +20,25 @@
     position: initial;
     margin: 0.5em 0;
 }
+
+.card__descricao {
+    display:flex;
+    justify-content: space-between;
+    
+}
+.card__botao{
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
+}
+.botao{
+    display: flex;
+    border: 1px solid black;
+}
+
+.card{
+    background: var(--branco)
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    border: 1px solid black;
+}
